[WGSL] shader,execution,expression,unary,address_of_and_indirection:* is failing https://bugs.webkit.org/show_bug.cgi?id=274754 rdar://128792671

Reviewed by Mike Wyrzykowski.

There were two issues:
- we weren't setting CallExpression::m_isConstructor for calls to struct and array
  constructors.
- we were not handling the case for index access on pointers in the code generator.
  i.e. `x[i]` needs to emit `(*x)[i]` when `x` is a pointer.

* LayoutTests/http/tests/webgpu/webgpu/shader/execution/expression/unary/address_of_and_indirection-expected.txt: Added.
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/279399@main